# face-detection-api

./: Cargo.toml  README.md
model/fine-tune-artifacts/: args.yaml
src/: main.rs
