[package]
name = "face-detection-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
image = "0.25"
ndarray = "0.15"
